--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html{
 body{
   margin-left: -1.2vh;
   width:100%;
-  height: 103vh;
+  height: 85vh;
  background: linear-gradient(90deg, rgba(0, 255, 235, 1) 27%, rgba(7, 58, 187, 1) 100%);
 }
 .logo{
@@ -21,8 +21,9 @@ body{
   display: flex;
   align-items: left;
 }
+
 .navigation-bar{
-  background-color: rgba(0, 255, 235, 1);
+  background: linear-gradient(90deg, rgba(0, 255, 235, 1) 27%, rgba(7, 58, 187, 1) 100%);
   margin-left: -2.2vw;
   margin-right: -2.2vw;
   margin-top: -0.4vh;
@@ -37,11 +38,17 @@ body{
   margin-right: 0vw;
   margin-top: -1.2vw;
   color: #001;
-  gap:2.9vw;
+  gap:3.1vw;
+}
+.my-education:hover{
+  color: slateblue;
+}
+.grade:hover{
+  color: slateblue;
 }
 .owner{
   width:50vw;
-  height: 30vh;
+  height: 35vh;
    display: flex;
  position:  relative;
   top: 3vh;
@@ -61,4 +68,24 @@ body{
   position: relative;
   bottom: -4vh;
   margin-left: 37vw;
+}
+.education-board{
+ width:50vw;
+  height: 35vh;
+   display: flex;
+ position:  relative;
+  top: 45vh;
+  
+}
+.my-education{
+  margin-left: 7vw;
+  font-size: 3vh;
+}
+.grade{
+  margin-left: 5vw;
+  font-size: 2.5vw;
+}
+a{
+  text-decoration: none;
+  color:black;
 }
