--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html{
 body{
   margin-left: -1.2vh;
   width:100%;
-  height: 85vh;
+  height: 100vh;
  background: linear-gradient(90deg, rgba(0, 255, 235, 1) 27%, rgba(7, 58, 187, 1) 100%);
 }
 .logo{
@@ -21,9 +21,8 @@ body{
   display: flex;
   align-items: left;
 }
-
 .navigation-bar{
-  background: linear-gradient(90deg, rgba(0, 255, 235, 1) 27%, rgba(7, 58, 187, 1) 100%);
+  background-color: rgba(0, 255, 235, 1);
   margin-left: -2.2vw;
   margin-right: -2.2vw;
   margin-top: -0.4vh;
@@ -38,17 +37,11 @@ body{
   margin-right: 0vw;
   margin-top: -1.2vw;
   color: #001;
-  gap:3.1vw;
-}
-.my-education:hover{
-  color: slateblue;
-}
-.grade:hover{
-  color: slateblue;
+  gap:2.9vw;
 }
 .owner{
   width:50vw;
-  height: 35vh;
+  height: 30vh;
    display: flex;
  position:  relative;
   top: 3vh;
@@ -68,24 +61,4 @@ body{
   position: relative;
   bottom: -4vh;
   margin-left: 37vw;
-}
-.education-board{
- width:50vw;
-  height: 35vh;
-   display: flex;
- position:  relative;
-  top: 45vh;
-  
-}
-.my-education{
-  margin-left: 7vw;
-  font-size: 3vh;
-}
-.grade{
-  margin-left: 5vw;
-  font-size: 2.5vw;
-}
-a{
-  text-decoration: none;
-  color:black;
 }
