--- a/style.css
+++ b/style.css
@@ -1,64 +1,116 @@
-html{
-  font-size: 62.5%;
-}
 *{
-  padding: 0px;
-  margin: 0px;
-  box-sizing: border-box;
+    margin:0 auto;
+}body{
+    width:100%;
+    height:80vh;
+    background: white;
 }
-body{
-  margin-left: -1.2vh;
-  width:100%;
-  height: 100vh;
- background: linear-gradient(90deg, rgba(0, 255, 235, 1) 27%, rgba(7, 58, 187, 1) 100%);
+.nav-container{
+    width: 100%;
+    height: 8.7vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background: #9e34eb;
+    
 }
-.logo{
-  width:16vw;
-  height: 12vh;
-  padding: 0vw 1.2vw;
-  margin-top: -2vh;
-  margin-left: 4vw;
-  display: flex;
-  align-items: left;
+
+.logo-container img{
+    width: 15vw;
+    height: 10vw;
 }
-.navigation-bar{
-  background-color: rgba(0, 255, 235, 1);
-  margin-left: -2.2vw;
-  margin-right: -2.2vw;
-  margin-top: -0.4vh;
-  height: 16vw;
-  border-bottom: 0.3vw solid #000;
+.logo-container div{
+    display: flex;
+    flex-direction: column;
+    align-items:  center;
+    background:#9e34eb ;
+    width: 100%;
+    height: 100%;
 }
-.nav{
-  font-size: 1.8vh;
-  display: flex;
-  align-items: center;
-  margin-left: 0vw;
-  margin-right: 0vw;
-  margin-top: -1.2vw;
-  color: #001;
-  gap:2.9vw;
+.nav-container div{
+    color:white;
+    
 }
-.owner{
-  width:50vw;
-  height: 30vh;
-   display: flex;
- position:  relative;
-  top: 3vh;
-  left: 32vw;
-  padding: 0.5vh 1.5vh;
-  border-radius: 4vh;
-  
+.content h1:nth-of-type(2){
+    color:#915EFF;
 }
-.biodata-heading{
-  display: flex;
-  margin-left: 5vh;
-  margin-top: 3vh;
-  font-size: 2vh;
+.im::selection{
+    color:#f2a218;
 }
-.bio{
-  font-size: 1.2vh;
-  position: relative;
-  bottom: -4vh;
-  margin-left: 37vw;
+.im:hover{
+    color:#fc6f03
+}
+.content p{
+    font-weight: bold;
+}
+.content img{
+    width:50vw;
+    height: 45vh;
+    
+    display: flex;
+    justify-content: center;
+}
+.pic1{
+    margin-left: -11vw;
+    border-bottom: 2px solid black;
+    
+}
+.content p::selection{
+    color:#f2a218;
+}
+.content p:hover{
+    color:#fc6f03;
+}
+.content{
+    margin-left:40px;
+}
+
+.btn-1{
+    width:26vw;
+    background:#915EFF;
+    color:white;
+    border:none;
+    border-radius:8px;
+    height:5vh;
+    font-size:10px;
+    transition: all 0.3s  0.4s;
+}
+.btn-1:hover{
+    background: deeppink;
+    width: 30vw;
+}
+.nav-container a{
+    text-decoration: none;
+    color:#fff;
+}
+
+.tik-tok img{
+    width: 50vw;
+    height: 30vh;
+    display: flex;
+    align-items: center;
+}
+.tik-tok button{
+   width:26vw;
+    background:#915EFF;
+    color:white;
+    border:none;
+    border-radius:8px;
+    height:5vh;
+    font-size:10px;
+    transition: all 0.3s  0.4s;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+.tik-tok h1{
+    text-align: center;
+}
+.tik-tok button:hover{
+    background: deeppink;
+    width: 30vw;
+}
+.tik-tok a{
+    text-decoration: none;
+    color: white;
 }
